Bug 390990 - Current item selection is lost after exiting from tar archives
Summary: Current item selection is lost after exiting from tar archives
Status: RESOLVED FIXED
Alias: None
Product: krusader
Classification: Applications
Component: general (other bugs)
Version First Reported In: Git
Platform: Gentoo Packages Linux
: NOR normal
Target Milestone: ---
Assignee: Martin Kostolný
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-02-24 06:47 UTC by Nikita Melnichenko
Modified: 2018-03-14 23:29 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Nikita Melnichenko 2018-02-24 06:47:19 UTC
Repro steps:
1. Find a .tar.xz, .tar.bz2, .tar.gz or .tgz archive.
2. Go inside like in dir.
3. Go to parent dir.
4. Observe selection is set to a parent dir containing the archive.

Expected: selection stays on the archive (like for .zip files).
Comment 1 Davide Gianforte 2018-02-25 09:32:57 UTC
Confirmed, this is because tar files are opened with KIO tar instead of krarc; KIO zip is affected too.
Comment 2 Martin Kostolný 2018-03-14 23:29:46 UTC
Git commit 59606b4fa872858261cfd6d888e29d3711c97f8c by Martin Kostolný.
Committed on 14/03/2018 at 23:28.
Pushed by martinkostolny into branch 'master'.

Fix current item selection after exiting a tar archive

Summary:
This patch ensures setting the right current item also when only url protocol changes. This happens when "tar" protocol is used to browse an archive and such archive is exited by going up in folder
hierarchy.

When tar protocol performs one more url change (to file:/) when it realizes that it isn't inside archive anymore. This url change was not accompanied with previous current item anymore. This is now
fixed.

FIXED: [ 390990 ] Current item selection is lost after exiting from tar archives

Test Plan:
- go up in standard local FS
- go up outside an archive (with krarc protocol)
- go up outside an archive (with tar protocol)

Reviewers: #krusader

Differential Revision: https://phabricator.kde.org/D11221

M  +5    -1    krusader/Panel/panelfunc.cpp

https://commits.kde.org/krusader/59606b4fa872858261cfd6d888e29d3711c97f8c