Fix current item selection after exiting a tar archive

Summary:
This patch ensures setting the right current item also when only url protocol changes. This happens when "tar" protocol is used to browse an archive and such archive is exited by going up in folder
hierarchy.

When tar protocol performs one more url change (to file:/) when it realizes that it isn't inside archive anymore. This url change was not accompanied with previous current item anymore. This is now
fixed.

FIXED: [ 390990 ] Current item selection is lost after exiting from tar archives
BUG: 390990

Test Plan:
- go up in standard local FS
- go up outside an archive (with krarc protocol)
- go up outside an archive (with tar protocol)

Reviewers: #krusader

Differential Revision: https://phabricator.kde.org/D11221