krusader/Panel/panelfunc.cpp
@@ -223,7 +223,11 @@ void ListPanelFunc::openUrlInternal(const QUrl &url, const QString& nameToMakeCu
 
     urlManuallyEntered = manuallyEntered;
 
-    history->add(cleanUrl, nameToMakeCurrent);
+    const QString currentItem = history->currentUrl().path() == cleanUrl.path()
+                                ? history->currentItem()
+                                : nameToMakeCurrent;
+
+    history->add(cleanUrl, currentItem);
 
     if(immediately)
         doRefresh();
